--- a/pages/fries.html
+++ b/pages/fries.html
@@ -8,6 +8,59 @@
     </head>
 
     <body>
+        <h1>Taco Bell Nacho Fries</h1>
+        <p><em>Taco Bell Nacho Fries are deliciously seasoned with Mexican spices and served with creamy cheese sauce. So if you love the crispy texture of the fries, bold seasoning, and warm nacho cheese sauce, you must make this copycat recipe.</em></p>
+
+        <img src="../images/fries.jpg">
+
+        <h2>Ingredients</h2>
+        <h3>Taco Bell Nacho Cheese</h3>
+        <ul>
+            <li>1 tablespoon salted butter</li>
+            <li>1/2 cup whole milk</li>
+            <li>8 ounces American cheese</li>
+            <li>1 tablespoon Tobasco Jalapeno sauce or juice from a jar of jalapeno slices for nachos</li>
+        </ul>
+
+        <h3>French Fry Seasoning</h3>
+        <ul>
+            <li>2 teaspoons paprika</li>
+            <li>2 teaspoons salt</li>
+            <li>1 teaspoon chili powder like McCormick's</li>
+            <li>1 teaspoon garlic powder do not use garlic salt</li>
+            <li>1 teaspoon onion powder do not use onion salt</li>
+        </ul>
+
+        <h3>French Fries</h3>
+        <ul>
+            <li>1 pound Frozen Fast Food Fries</li>
+            <li>vegetable oil for frying</li>
+
+        </ul>
+
+        <h2>Instructions</h2>
+        <h3>Seasoning blend instructions</h3>
+        <ol>
+            <li>If you have a spice grinder or a mini food processor, process spices to grind them more finely, if not, skip this step. Store spice blend in a salt shaker or another shaker. You will have some left over, you can use this for tacos, or another batch of fries.
+            </li>
+            
+        </ol>
+
+        <h3>Taco Bell Nacho Cheese Sauce</h3>
+        <ol>
+            <li>Combine all ingredients in a small pot, heat on low until the cheese melts, stir to combine.
+            </li>
+        </ol>   
         
+        <h3>French Fries Instructions</h3>
+        <ol>
+            <li>Fill a large pot with enough vegetable oil to fill the pot 4 inches deep. Heat the oil to 350 degrees.</li>
+            <li>Cook the fries for 6 to 8 minutes or until crispy. Remove fries from the oil and place on a wire rack that is resting on a baking sheet, and sprinkle liberally with the seasoning blend.</li>
+
+        </ol>
+        <h3>How to assemble and serve</h3>
+        <ol>
+            <li>Place some of the fries onto an individual serving plate, and then serve with a small bowl of cheese sauce.</li>
+        </ol>
     </body>
 </html>
